@@ -1,5 +1,6 @@
 2006-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* win/tclWinFile.c: Handle possible missing define.
 	* win/tclWinFile.c: Backported fix for bug #1420432 (cannot set 
 	* tests/cmdAH.test: mtime for directories on windows).
 
